--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
             </div>
         </div>
     </header>
-
+    <main class="main">
+        <section class="top">
+            <div class="container">
+                <div class="top-inner">
+                    <h1 class="top-title">
+                        A cup of tea is a moment of calm in the chaos of life
+                    </h1>
+                    <p class="top-text">
+                        Wide selection of high-quality teas from all over the world, carefully curated by tea experts.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <blockquote class="blockquote">
+            <p class="blockquote-text">
+                "Tea is not just a drink, it's a way of life and a
+                way to connect with our loved ones."
+            </p>
+        </blockquote>
+    </main>
 
 <script src="js/main.js"></script>
 </body>
